chore: update GA to GA4

--- a/themes/yun/_config.yml
+++ b/themes/yun/_config.yml
@@ -522,7 +522,7 @@ google_adsense:
 # ---------------
 google_analytics:
   enable: true
-  id: UA-180925442-1
+  id: G-MVRLRVZSZY
 
 # Google Tagmanager
 google_tagmanager:
