--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: https://kutsunasubarya.github.io/
+url: https://blog.subarya.me/
 root: //
 permalink: :year/:month/:day/:title/
 permalink_defaults:
